@@ -3,6 +3,7 @@ Changes since 5.2.rc4
 * FIX reconcile aspect ratio flags from "set view map" and "set view equal xy"
 * FIX "set key fixed" should be ignored in the case of "set view map"
 * FIX GPVAL_* variables were not being updated in "set table" mode
+* FIX nested iteration containing an empty range
 * NEW user-defined dashtypes in metapost terminal
 
 Changes in 5.2.rc3
